# log-relay-service

./: .gitignore  Cargo.toml  config.json  nats_config.json  start_nats.sh
crates/archiver/: Cargo.toml
crates/archiver/src/: batch.rs  config.rs  ingest.rs  main.rs
crates/generator/: Cargo.toml
crates/generator/src/: main.rs
crates/nats-utils/: Cargo.toml
crates/nats-utils/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  main.rs  state.rs
crates/server/src/api/: router.rs
crates/server/src/controllers/: logs.rs  mod.rs  stream_control.rs
crates/server/src/service/: nats.rs  stream_manager.rs
deployment/: nats.md
docs/: architecture-points.md  requirements.md  run-docs.md  stream-manager-design.md  sys-design.md  system-design.md
docs/apis/: stream.md
docs/impl/: nats.md
frontend/: README.md  app.js  package.json  style.css
log-relay/: Cargo.toml
log-relay/src/: lib.rs
log-relay/src/context/: config.rs  mod.rs
log-relay/src/controller/: handler.rs  mod.rs  types.rs
log-relay/src/service/: events.rs  manager.rs  mod.rs  stream.rs
service/: Cargo.toml
service/src/: main.rs  routes.rs
