[workspace]
members = [
    "crates/server",
    "crates/nats-utils",
    "crates/generator",
    "crates/archiver", 
    "service", 
    "log-relay",
]
resolver = "2"


[workspace.dependencies]
axum = "0.8"
futures = "0.3"
tokio = { version = "1.49", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
tokio-util = "0.7"
bytes = "1"
async-stream = "0.3"
dashmap = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.101"


# nats
async-nats = "0.38"


# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

