[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }

# services
log-relay = { path = "../log-relay" }


# tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
