[package]
name = "archiver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "archiver"
path = "src/main.rs"

[dependencies]
async-nats = "0.38"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
base64 = "0.22"
futures = "0.3"
nats-utils = { path = "../nats-utils" }
