[package]
name = "generator"
version = "0.1.0"
edition = "2024"

[dependencies]
nats-utils = { path = "../nats-utils" }
tokio = { version = "1.0", features = ["full", "time"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
